--- a/data-analysis/statistical-analysis.ipynb
+++ b/data-analysis/statistical-analysis.ipynb
@@ -7,21 +7,27 @@
    "source": [
     "# Statistical analysis for the experimental data\n",
     "\n",
-    "> 🎯 **Goal**: Confirm that the effect produced by the addition of PDGF-BB is statistically significant\n",
-    ">\n",
-    "> ☑️ **Status**: Under development 🚧\n",
+    "🎯 **Goal**: Confirm that the effect produced by the addition of PDGF-BB is statistically significant\n",
     "\n",
-    "---\n"
+    "---\n",
+    "\n",
+    "## Context\n",
+    "To make a more informed decision on whether the presence and spatial location of PDGF-BB is leading to different migration patterns, we will perform some statistical tests on the experimental data.\n",
+    "\n",
+    "Since we are comparing 3 groups (control, MC and OC), we will use a one-way ANOVA test to find if there are any statistical differences between them. Subsequently, if we detect that there are differences, we will run some post-hoc Tukey tests to identify which pairs of groups are different from each other. When we only have 2 groups (control and OC), we use a single one-way ANOVA test.\n",
+    "\n",
+    "We perform these tests for each day of experiments and present the corresponding p-value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "e85a08b4",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
+    "\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -32,24 +38,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "60a9261b",
-   "metadata": {},
-   "source": [
-    "## 2.5 mg/mL matrix - 96 hours"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "66661a4f",
-   "metadata": {},
-   "source": [
-    "### One-way ANOVA between the three conditions"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "c4d52750",
    "metadata": {},
    "outputs": [],
@@ -68,8 +58,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "60a9261b",
+   "metadata": {},
+   "source": [
+    "## 2.5 mg/mL matrix - 96 hours\n",
+    "\n",
+    "### One-way ANOVA between the three conditions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "499d5173",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "9bb58c34",
    "metadata": {},
    "outputs": [
@@ -161,6 +161,7 @@
     }
    ],
    "source": [
+    "# Set the rejection value to identify the groups with differences\n",
     "rejection_pvalue = 0.001\n",
     "\n",
     "for day in single_chamber_df['day'].unique():\n",
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "d6ce15e2",
    "metadata": {},
    "outputs": [
@@ -191,7 +192,7 @@
      "text": [
       "p-value for day 1: 6.94244762434078e-10 (***)\n",
       "p-value for day 2: 1.5871213114475845e-22 (***)\n",
-      "p-value for day 3: 4.391514061384784e-25 (***)\n",
+      "p-value for day 3: 4.391514061384971e-25 (***)\n",
       "p-value for day 4: 1.0421255815115056e-20 (***)\n",
       "p-value for day 7: 3.6514562993049014e-41 (***)\n",
       "p-value for day 8: 9.182031264343604e-39 (***)\n",
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "a90efea9",
    "metadata": {},
    "outputs": [
